--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,9 @@
   "compilerOptions": {
     "target": "ES2016",
     "module": "commonjs",
-    "lib": ["es6"],
+    "lib": [
+      "es6"
+    ],
     "allowJs": true,
     "outDir": "build",
     "rootDir": "src",
@@ -11,17 +13,35 @@
     "strictPropertyInitialization": false,
     "baseUrl": "./",
     "paths": {
-      "@config/*": ["src/config/*"],
-      "@modules/*": ["src/modules/*"],
-      "@shared/*": ["src/shared/*"]
+      "@config/*": [
+        "src/config/*"
+      ],
+      "@modules/*": [
+        "src/modules/*"
+      ],
+      "@shared/*": [
+        "src/shared/*"
+      ]
     },
-    "typeRoots": ["@types", "./node_modules/@types"],
+    "typeRoots": [
+      "@types",
+      "./node_modules/@types"
+    ],
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node",
   },
-  "exclude": ["node_modules", "babel.config.js", "jest.config.ts", "coverage"]
+  "exclude": [
+    "node_modules",
+    "babel.config.js",
+    "jest.config.ts",
+    "coverage"
+  ],
+  "include": [
+    "src"
+  ]
 }
